creo el requeriments

--- a/usuario/templates/account/estadisticas/egresados/egresados_x_anio.html
+++ b/usuario/templates/account/estadisticas/egresados/egresados_x_anio.html
@@ -13,7 +13,7 @@
 
     {# Botón "Volver a Estadísticas" SIEMPRE VISIBLE #}
     <div class="mb-3">
-         <a href="{% url 'dashboard' %}"  class="btn btn-secondary">
+         <a href="{% url 'dashboard' %}"  class="btn btn-secondary">git {% blocktrans %}{% endblocktrans %}
             Volver a Estadísticas
         </a>
     </div>
