--- a/usuario/templates/account/reportes/cursadas/cursadas_report.html
+++ b/usuario/templates/account/reportes/cursadas/cursadas_report.html
@@ -12,6 +12,12 @@
 <div class="container mt-3">
     <h1 class="h2 mb-4">{{ report_title }}</h1>
 
+    <div class="mb-3">
+        <a href="{% url 'dashboard' %}" class="btn btn-secondary ms-2">
+            Volver a Reportes
+        </a>
+    </div>
+
     <div class="card mb-4 shadow-sm">
         <div class="card-header">
             Filtros del Reporte
@@ -51,9 +57,6 @@
             <div>
                 <a href="{% url 'export_cursadas_excel' %}{% if request.GET %}?{{ request.GET.urlencode }}{% endif %}" class="btn btn-success">
                     <i class="fas fa-file-excel"></i> Exportar a Excel
-                </a>
-                <a href="{% url 'dashboard' %}" class="btn btn-secondary ms-2">
-                    Volver a Reportes
                 </a>
             </div>
             {% if cursadas_page_obj.has_other_pages %}
