dashboard link tarjeta docxcomision

--- a/usuario/templates/account/dashboard.html
+++ b/usuario/templates/account/dashboard.html
@@ -153,6 +153,8 @@
                         window.location.href = '/account/reportes/examenes/';
                     } else if (reportType === 'cursadas') {
                         window.location.href = '/account/reportes/cursadas/';
+                    } else if (reportType === 'docxcomision') {
+                        window.location.href = '/account/reportes/docentes';
                     } else if (reportType === 'ingresantes') {
                         window.location.href = '/account/estadisticas/ingresantes/';
                     } else if (reportType === 'retenidos') {
