--- a/usuario/templates/account/estadisticas/estadisticas (copia).html
+++ b/usuario/templates/account/estadisticas/estadisticas (copia).html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="container-fluid mt-3">
 
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4" id="contenedorTarjetas">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         {# Tarjeta para 'Ingresantes por Carrera' #}
         <div class="col">
             <div class="card h-100 shadow-sm">
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        {# Alumnos Retenidos de primer año #}
+{# Tarjeta para 'Alumnos Retenidos de primer año' #}
         <div class="col">
             <div class="card h-100 shadow-sm">
                 <img src="{% static 'usuario/img/retenidos.png' %}" class="card-img-top p-3" alt="retenidos" style="height: 140px; object-fit: contain;">
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        {# Alumnos Retenidos de primer año #}
+{# Tarjeta para 'Alumnos Retenidos de primer año' #}
         <div class="col">
             <div class="card h-100 shadow-sm">
                 <img src="{% static 'usuario/img/fetaria.png' %}" class="card-img-top p-3" alt="rango_etario" style="height: 140px; object-fit: contain;">
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        {# Alumnos Retenidos de primer año #}
+{# Tarjeta para 'Alumnos Retenidos de primer año' #}
         <div class="col">
             <div class="card h-100 shadow-sm">
                 <img src="{% static 'usuario/img/gradxanio120.png' %}" class="card-img-top p-3" alt="graduados_anio" style="height: 140px; object-fit: contain;">
