--- a/usuario/templates/registration/logged_out.html
+++ b/usuario/templates/registration/logged_out.html
@@ -4,9 +4,22 @@
 
 {% block content %}
 
-<div class="container">
-    <h1>Logout</h1>
-    <p>Has cerrado sesión correctamente.</p>
-    <a href="{% url 'login' %}">Iniciar sesión</a>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 mx-auto"> <div class="alert alert-info text-center">
+                Has cerrado sesión correctamente.
+            </div>
+
+            <div class="card mt-3">
+                <div class="card-body text-center">
+                    <h5 class="card-title">¡Hasta pronto!</h5>
+                    <p class="card-text">Gracias por usar nuestra web de estadisticas frcu.</p>
+                    <a href="{% url 'login' %}" class="btn btn-primary mt-3">Iniciar sesión</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 {% endblock %}
