--- a/usuario/templates/base.html
+++ b/usuario/templates/base.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{% static 'estilos.css' %}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
 </head>
-<body>
+<body  class="d-flex flex-column min-vh-100">
    {% block navbar %}
   <nav class="navbar bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
@@ -110,6 +110,30 @@
   {# Aquí se inyectará tu JavaScript adicional del dashboard.html #}
   {% block extra_js %}
   {% endblock %}
+
+
+
+    <footer class="footer mt-auto py-3 bg-primary text-white"> {# Usamos bg-primary y text-white para que coincida con el navbar #}
+        <div class="container">
+            <div class="row align-items-center"> {# align-items-center para centrar verticalmente el contenido de las columnas #}
+                <div class="col-md-3 text-center text-md-start">
+                    {# Usa la misma ruta de imagen que en tu navbar para consistencia #}
+                    <img src="{% static 'usuario/img/logoBlanco.png' %}" alt="UTN-FRCU" style="height: 50px;">
+                </div>
+
+                <div class="col-md-4 text-center text-md-start">
+                    <p class="mb-1 fw-bold">@FRCU - UTN {{ current_year }}</p>
+                    <p class="mb-1">Concepción del Uruguay - Entre Ríos</p>
+                    <p class="mb-0">Ing. Pereyra 676</p>
+                </div>
+
+                <div class="col-md-5 text-center text-md-end">
+                    <p class="mb-1"><strong>Consultas:</strong> <a href="mailto:bentancourl@frcu.utn.edu.ar" class="text-white text-decoration-none">bentancourl@frcu.utn.edu.ar</a></p>
+                    <p class="mb-0">Secretaria de Tics - Desarrollo</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
