agrego cambios al base

--- a/usuario/templates/base.html
+++ b/usuario/templates/base.html
@@ -129,7 +129,7 @@
 
                 <div class="col-md-5 text-center text-md-end">
                     <p class="mb-1"><strong>Consultas:</strong> <a href="mailto:bentancourl@frcu.utn.edu.ar" class="text-white text-decoration-none">bentancourl@frcu.utn.edu.ar</a></p>
-                    <p class="mb-0">Secretaria de Tics - Desarrollo</p>
+                    <p class="mb-0">Desarrollo - Secretaria de Tics</p>
                 </div>
             </div>
         </div>
