extrajeros view,url,dashboard y html vacio

--- a/usuario/templates/account/dashboard.html
+++ b/usuario/templates/account/dashboard.html
@@ -146,6 +146,8 @@
                     window.location.href = '/account/reportes/examenes/';
                 } else if (reportType === 'cursadas') {
                     window.location.href = '/account/reportes/cursadas/';
+                } else if (reportType === 'aluextranjeros') {
+                    window.location.href = '/account/reportes/extranjeros/';
                 } else if (reportType === 'docxcomision') {
                     window.location.href = '/account/reportes/docentes';
                 } else if (reportType === 'ingresantes') {
